--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "idb": "^8.0.3",
     "lz-string": "^1.5.0",
+    "pako": "^2.1.0",
     "rrweb": "^2.0.0-alpha.4",
+    "rrweb-snapshot": "^2.0.0-alpha.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.26",
     "@types/chrome": "^0.0.246",
+    "@types/pako": "^2.0.3",
     "@vitejs/plugin-vue": "^4.4.0",
     "gulp": "^5.0.0",
     "gulp-zip": "^6.0.0",
