--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "idb": "^8.0.3",
     "lz-string": "^1.5.0",
+    "pako": "^2.1.0",
     "rrweb": "^2.0.0-alpha.4",
     "vue": "^3.3.4"
   },
