--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-VITE_REPORT_OE_API_URL="https://api.ptpkx.com/takenote/add"
+# VITE_UPLOAD_URL="http://192.168.100.199:88/gk-tools/record/submit"
+
+VITE_UPLOAD_URL="https://zls6688.natappvip.cc/gk-tools/record/submit"
+
 VITE_TEAM="jgb"
+
+# 采样率
 VITE_PROBABILITY=1
