--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# VITE_UPLOAD_URL="http://192.168.100.199:88/gk-tools/record/submit"
+# VITE_UPLOAD_URL="http://192.168.5.199:88/gk-tools/record/submit"
+VITE_UPLOAD_URL="http://192.168.1.5:88/gk-tools/record/submit"
 
-VITE_UPLOAD_URL="https://zls6688.natappvip.cc/gk-tools/record/submit"
+# VITE_UPLOAD_URL="https://zls6688.natappvip.cc/gk-tools/record/submit"
 
 VITE_TEAM="jgb"
 
