--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # VITE_UPLOAD_URL="http://192.168.1.5:88/gk-tools/record/submit" # 老三局域网
 # VITE_UPLOAD_URL="https://zls6688.natappvip.cc/gk-tools/record/submit"  # 老三外网
 
-VITE_UPLOAD_URL="http://192.168.88.248:88/gk-tools/record/submit"  # 布尔局域网
 # VITE_UPLOAD_URL="http://192.168.88.248:88/gk-tools/record/submit"  # 布尔局域网
+# VITE_UPLOAD_URL="https://qfbf66889.vip.cpolar.cn/gk-tools/record/submit"  # 布尔局域网
+VITE_UPLOAD_URL="http://192.168.88.102:88/gk-tools/record/submit"  # 布尔局域网
 
 
 
