--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boolean-monitor",
-  "displayName": "boolean-Monitor",
-  "version": "2.1.3",
+  "displayName": "Boolean-Monitor",
+  "version": "2.1.8",
   "author": "**",
   "description": "",
   "type": "module",
